# situational_graphs_reasoning_msgs

./: CMakeLists.txt  LICENSE  README.md  package.xml
msg/: Attribute.msg  Edge.msg  Graph.msg  GraphAvailableElements.msg  GraphKeyframes.msg  Keyframe.msg  Match.msg  Node.msg  Plane.msg  RelativeMapEstimation.msg  RoomKeyframe.msg  VSGraphsAllWallsData.msg  VSGraphsWallData.msg  ValidRooms.msg  VerticalPlanes.msg
srv/: ExportKeyframes.srv  RequestRoomKeyframe.srv  SubgraphMatch.srv
